a lot of small fixes

--- a/dankwoord.tex
+++ b/dankwoord.tex
@@ -8,11 +8,41 @@
 %\epigraph{\textit{Er ist ein Mathematiker und also hartnäckig.}}{Johann Wolfgang von Goethe}
 \epigraph{\textit{Mit Mathematikern ist kein heiteres Verhältnis zu gewinnen.}}{Johann Wolfgang von Goethe}
 
-Taking up the quote from above, I thank everyone who tried nevertheless, 
-especially  Miel, Jos, Ruben, Tom, Pieter Pauwels, Femke, Agfa etc.
+%Describe the ``culture shock'' and explain why you chose the quote above. 
 
-I also thank Stefanie Michael for encouraging me to start this journey, without her I would never have applied for my PhD position. 
 
+
+Taking up the quote from above, I thank everyone who tried nevertheless.
+I particular I thank Miel for guiding me through the writing process of this thesis. Femke for listening and helping with all kinds of problems. 
+Joachim for always having answers.
+I furthermore thank all former members of the Knowledge on Web-Scale (KNoWS) team -- especially Tom D.N., Sam, Hajar, Cristian, Laurens, Gayane, Dieter D.P., Dieter D.W. --
+and all its current members, in particular:
+Pieter C.,
+Pieter H.,
+Ben, Sven, Gerald, Martin, Julian, Harm, Brecht, Anastasia, and Ruben T.  
+I also thank  all current and former members of IBCN I had the pleasure to work with, in particular Pieter B., Mathias, Stijn and Alexander.
+%Miel, Jos, Ruben, Tom, Pieter Pauwels, Femke, Agfa etc.
+
+Furthermore, I thank all people at Agfa I collaborated with. I always enjoyed visiting you. In particular I thank Giovanni for always sharing the programmer's perspective with me,
+I thank Hong  for his challenging questions, Boris for helping me with decisions, and Els for always trying to keep us focussed -- I know that this is not an easy 
+task given that Jos and I really enjoy discussing logical details. 
+A very special thanks goes to Jos for exactly those discussions. I think there is no one with whom talking about logics is more enjoyable.
+It was you who reminded me how exciting research is.
+
+I thank all members of my jury for agreeing to review my thesis. Here, I would like to thank Harold in particular for making me feel welcome in the RuleML community.
+ 
+A special thank you also goes to my supervisors.
+I thank Tom S. for encouraging me to aim for \emph{good} papers instead of papers \emph{good enough to be accepted}.
+I thank Erik for always backing me up. I thank Ruben for sharing his enthusiasm with me and for pointing me to my research topic:
+I am very happy that you immediately anticipated my passion for \nthreelogic.  
+
+I also thank all my friends who supported me during the writing of my thesis or even before. 
+A special thanks goes to Stefanie, my former colleague, who encouraged me to start this journey, without her I would never have applied for my PhD position.
+I thank my family, my parents, my two brothers and, especially, my sister Sabine who helped me with the Dutch translation of my summary.
+
+Last, but not least, I thank Nicolas who gave me a lot practical and moral support especially in the last weeks of writing where he took care of our daughter Paula. 
+Without you this thesis would not have been possible.
+Thank you!
 
 \vspace*{\fill}
 
