--- a/refs.bib
+++ b/refs.bib
@@ -1509,23 +1509,7 @@ abstract="A layered architecture for the Semantic Web that adheres to software e
 isbn="978-3-540-68234-9"
 }
 
-@InProceedings{rearch,
-author="Kifer, Michael
-and de Bruijn, Jos
-and Boley, Harold
-and Fensel, Dieter",
-editor="Adi, Asaf
-and Stoutenburg, Suzette
-and Tabet, Said",
-title="A Realistic Architecture for the Semantic Web",
-booktitle="Rules and Rule Markup Languages for the Semantic Web",
-year="2005",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="17--29",
-abstract="In this paper we argue that a realistic architecture for the Semantic Web must be based on multiple independent, but interoperable, stacks of languages. In particular, we argue that there is a very important class of rule-based languages, with over thirty years of history and experience, which cannot be layered on top of OWL and must be included in the Semantic Web architecture alongside with the stack of OWL-based languages. The class of languages we are after includes rules in the Logic Programming style, which support default negation. We briefly survey the logical foundations of these languages and then discuss an interoperability framework in which such languages can co-exist with OWL and its extensions.",
-isbn="978-3-540-32270-2"
-}
+
 
 @InProceedings{twotowers,
 author="Horrocks, Ian
@@ -2367,7 +2351,7 @@ doi="10.1007/11853107_11",
 url="http://dx.doi.org/10.1007/11853107_11"
 }
 
-@Inbook{Kifer2005,
+@InProceedings{kifer2005,
 author="Kifer, Michael
 and de Bruijn, Jos
 and Boley, Harold
@@ -2385,6 +2369,9 @@ isbn="978-3-540-32270-2",
 doi="10.1007/11580072_3",
 url="http://dx.doi.org/10.1007/11580072_3"
 }
+
+
+
 @Inbook{negflora,
 author="Kifer, Michael",
 editor="Baral, Chitta
@@ -2683,4 +2670,136 @@ isbn="978-3-642-17746-0"
   school = {Ghent University},
   address = {Ghent, Belgium},
   url = {https://ruben.verborgh.org/phd/},
+}
+@inproceedings{krotzsch2019power,
+  title={The Power of the Terminating Chase (Invited Talk)},
+  author={Kr{\"o}tzsch, Markus and Marx, Maximilian and Rudolph, Sebastian},
+  booktitle={22nd International Conference on Database Theory (ICDT 2019)},
+  year={2019},
+  organization={Schloss Dagstuhl-Leinbniz-Zentrum fuer Informatik}
+}
+@article{gottlob2013combining,
+  title={Combining decidability paradigms for existential rules},
+  author={Gottlob, Georg and Manna, Marco and Pieris, Andreas},
+  journal={Theory and Practice of Logic Programming},
+  volume={13},
+  number={4-5},
+  pages={877--892},
+  year={2013},
+  publisher={Cambridge University Press}
+}
+@inproceedings{krotzsch2011extending,
+  title={Extending decidable existential rules by joining acyclicity and guardedness},
+  author={Kr{\"o}tzsch, Markus and Rudolph, Sebastian},
+  booktitle={Twenty-Second International Joint Conference on Artificial Intelligence},
+  year={2011}
+}
+@article{ssn,
+title = "The {SSN} ontology of the {W3C} semantic sensor network incubator group ",
+journal = "Web Semantics: Science, Services and Agents on the World Wide Web ",
+volume = "17",
+number = "",
+pages.bak = "25 - 32",
+year = "2012",
+note = "",
+issn = "1570-8268",
+doi = "https://doi.org/10.1016/j.websem.2012.05.003",
+url = "https://www.sciencedirect.com/science/article/pii/S1570826812000571",
+author = "{Compton M. et al.}",
+author.bak = "Michael Compton and Payam Barnaghi and Luis Bermudez and Raúl Garc\'ia-Castro and Oscar Corcho and Simon Cox and John Graybeal and Manfred Hauswirth and Cory Henson and Arthur Herzog and Vincent Huang and Krzysztof Janowicz and W. David Kelsey and Danh Le Phuoc and Laurent Lefort and Myriam Leggieri and Holger Neuhaus and Andriy Nikolov and Kevin Page and Alexandre Passant and Amit Sheth and Kerry Taylor",
+keywords = "Semantic sensor web",
+keywords = "Linked sensor data",
+keywords = "Ontologies",
+keywords = "Semantic interoperability",
+keywords = "Sensor web enablement "
+}
+@inproceedings{Krötzsch2012,
+author="Kr{\"o}tzsch, Markus",
+editor.bak="Eiter, Thomas
+and Krennwallner, Thomas",
+title="{OWL 2} Profiles: An Introduction to Lightweight Ontology Languages",
+bookTitle="Proceedings of the 8th Reasoning Web International Summer School",
+year="2012",
+publisher.bak="Springer Berlin Heidelberg",
+address.bak="Berlin, Heidelberg",
+pages.bak="112--183",
+abstract="This chapter gives an extended introduction to the lightweight profiles OWL EL, OWL QL, and OWL RL of the Web Ontology Language OWL. The three ontology language standards are sublanguages of OWL DL that are restricted in ways that significantly simplify ontological reasoning. Compared to OWL DL as a whole, reasoning algorithms for the OWL profiles show higher performance, are easier to implement, and can scale to larger amounts of data. Since ontological reasoning is of great importance for designing and deploying OWL ontologies, the profiles are highly attractive for many applications. These advantages come at a price: various modelling features of OWL are not available in all or some of the OWL profiles. Moreover, the profiles are mutually incomparable in the sense that each of them offers a combination of features that is available in none of the others. This chapter provides an overview of these differences and explains why some of them are essential to retain the desired properties. To this end, we recall the relationship between OWL and description logics (DLs), and show how each of the profiles is typically treated in reasoning algorithms.",
+isbn="978-3-642-33158-9",
+doi="10.1007/978-3-642-33158-9_4",
+url="https://doi.org/10.1007/978-3-642-33158-9_4"
+}
+@Article{streamreasoning,
+  author = 	 {Daniele Dell'Aglio and Emanuele Della Valle
+                  and Frank van Harmelen and Abraham Bernstein},
+  title = 	 {Stream Reasoning: a Survey and Outlook:
+                  A summary of ten years of research and a vision for the
+		  next decade},
+  journal = 	 {Data Science Journal},
+  year = 	 2017,
+  volume = 	 1,
+  doi =          {http://www.doi.org/10.3233/DS-170006},
+  keywords = {Semantic Web},
+  urlPaper = "http://www.cs.vu.nl/~frankh/postscript/DataScence2017.pdf"
+}
+@Inbook{rspql-language,
+author="Dell'Aglio, Daniele
+and Calbimonte, Jean-Paul
+and Della Valle, Emanuele
+and Corcho, Oscar",
+editor="Gandon, Fabien
+and Gu{\'e}ret, Christophe
+and Villata, Serena
+and Breslin, John
+and Faron-Zucker, Catherine
+and Zimmermann, Antoine",
+title="Towards a Unified Language for RDF Stream Query Processing",
+bookTitle="The Semantic Web: ESWC 2015 Satellite Events: ESWC 2015 Satellite Events, Portoro{\v{z}}, Slovenia, May 31 -- June 4, 2015, Revised Selected Papers",
+year="2015",
+publisher.bak="Springer International Publishing",
+address.bak="Cham",
+pages.bak="353--363",
+abstract="In recent years, several RDF Stream Processing (RSP) systems have emerged, which allow querying RDF streams using extensions of SPARQL that include operators to take into account the velocity of this data. These systems are heterogeneous in terms of syntax, capabilities and evaluation semantics. Recently, the W3C RSP Group started to work on a common model for representing and querying RDF streams. The emergence of such a model and its accompanying query language is expected to take the most representative, significant and important features of previous efforts, but will also require a careful design and definition of its semantics. In this work, we present a proposal for the query semantics of the W3C RSP query language, and we discuss how it can capture the semantics of existing engines (CQELS, C-SPARQL, SPARQL                                                                                  {\$}{\$}{\_}{\{}stream{\}}{\$}{\$}                  ), explaining and motivating their differences. Then, we use RSP-QL to analyze the current version of the W3C RSP Query Language proposal.",
+isbn="978-3-319-25639-9",
+doi="10.1007/978-3-319-25639-9_48",
+url="https://doi.org/10.1007/978-3-319-25639-9_48"
+}
+@article{streams,
+title = "Streaming the {Web:} Reasoning over dynamic data",
+journal = "Journal of Web Semantics",
+volume.bak = "25",
+number.bak = "Supplement C",
+pages.bak = "24 - 44",
+year = "2014",
+issn = "1570-8268",
+doi = "https://doi.org/10.1016/j.websem.2014.02.001",
+url = "http://www.sciencedirect.com/science/article/pii/S1570826814000067",
+author = "Alessandro Margara and Jacopo Urbani and Frank van Harmelen and Henri Bal",
+keywords = "Semantic Web, Stream reasoning, Survey, Stream processing, Complex Event Processing"
+}
+@article{obdaStream,
+ author = {Bienvenu, Meghyn and Cate, Balder Ten and Lutz, Carsten and Wolter, Frank},
+ title = {Ontology-Based Data Access: A Study Through Disjunctive {Datalog, CSP, and MMSNP}},
+ journal = {ACM Trans. Database Syst.},
+ issue_date = {December 2014},
+ volume.bak = {39},
+ number.bak = {4},
+ month = dec,
+ year = {2014},
+ issn = {0362-5915},
+ pages.bak = {33:1--33:44},
+ articleno = {33},
+ numpages = {44},
+ url = {http://doi.acm.org/10.1145/2661643},
+ doi = {10.1145/2661643},
+ acmid = {2661643},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Ontology-based data access, query answering, query rewriting},
+} 
+@patent{patent_15202196-0-1955,
+  author = {Dereuddre, Wim and Bhatti, Jabran and Crombez, Pieter and Verborgh, Ruben and Arndt, D\"orthe and De Meester, Ben},
+  title = {Task management system and method for assigning tasks in a task management system},
+  year = 2016,
+  number = {15202196.0-1955},
+  status = {patent pending},
 }
