less research questions

--- a/summary.tex
+++ b/summary.tex
@@ -19,7 +19,7 @@ the semantics of N3 is only informally defined which not only
 makes it difficult to study its formal properties,
 it has also practical consequences: in many cases the interpretations of the same formula differ between reasoning engines. 
 
-The thesis starts by discussing the Semantic Web, its architecture, and the role the \emph{Unifying Logic} plays in it: 
+%The thesis starts by discussing the Semantic Web, its architecture, and the role the \emph{Unifying Logic} plays in it: 
 We understand the \emph{Unifying Logic} 
 as a practical tool which needs to support the common tasks associated with querying, reasoning over ontologies and taxonomies, and rule-based inference.
 This tool itself needs to be part of the Semantic Web -- for example by understanding its language RDF -- and it should support the layer of proofs.
@@ -29,7 +29,7 @@ of RDF and OWL DL, OWL Full, is already not decidable. The semantics of the \emp
 
 Having identified these requirements -- (1) clear semantics, (2) compatibility with RDF, (3) support for querying, reasoning over ontologies/taxonomies and 
 rule-based inferencing, and
-(4) support of proofs -- we direct our attention to N3 in order to investigate in how far that logic can fulfil the requirements.
+(4) support of proofs -- we next investigate in how far these can be met by N3.
 
 As the Semantics of N3 is not clearly defined and implementations even differ in their understanding of certain formulas, we start by performing tests to better understand the 
 problem: We detect that the reasoners EYE and Cwm disagree in their interpretation of implicitly quantified variables. In N3 it is possible to use universally or 
